# RAG-Document-Q-A-System

./: .gitignore  README.md  documentation.md  pyproject.toml  rebuild_final_index.py  requirements.txt  setup.sh  test_final_system.py  test_ollama.py  verify_packages.py  verify_setup.py
.streamlit/: config.toml  credentials.toml
app/: streamlit_app.py
src/: __init__.py  config.py  document_loader.py  embedding_indexer.py  evaluator.py  llm_responder.py  retriever.py  text_processor.py
