[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-document-qa"
version = "1.0.0"
dependencies = [
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-text-splitters==0.3.0",
    "faiss-cpu==1.8.0",
    "sentence-transformers==2.3.1",
    "streamlit==1.38.0",
    "PyPDF2==3.0.1",
    "python-dotenv==1.0.1",
    "tiktoken==0.7.0",
    "pandas==2.2.0",
    "numpy==1.26.4",
    "ragas==0.1.0",
    "requests==2.31.0"
]